--- a/client/consumer/test.cfg
+++ b/client/consumer/test.cfg
@@ -29,15 +29,15 @@ consume = {
         },
         {
             name="playout";
-            statistics = ("rebuf", "rawBytesRcvd", "latEst", "framesReq", "framesPlayed", "framesInc", "skipBadGop"); 
+            statistics = ("rebuf", "rawBytesRcvd", "latEst", "framesReq", "framesPlayed", "framesInc", "framesAcq", "skipBadGop", "skipNoKey", "skipInc", "framesRec", "framesResc"); 
         },
         {
             name="pipeline";
-            statistics = ("dArr", "lambdaD", "drdPrime", "drdEst", "rtxNum"); 
+            statistics = ("dArr", "lambdaD", "drdPrime", "drdEst"); 
         },
         {
             name="data";
-            statistics = ("rawBytesRcvd", "isent", "segNumRcvd", "timeouts");
+            statistics = ("rawBytesRcvd", "isent", "segNumRcvd", "timeouts", "rtxNum");
         });
     };
 
