--- a/client/Dockerfile-base
+++ b/client/Dockerfile-base
@@ -4,4 +4,5 @@ MAINTAINER Peter Gusev
 ADD runtest.sh /root/headless/
 RUN chmod +x /root/headless/runtest.sh
 
-CMD ["/root/headless/runtest.sh", "hub", "producer1", "300"]
+ADD test.cfg
+CMD ["/root/headless/runtest.sh", "client2", "hub", "/root/headless/config/test.cfg", "300", "test=test0"]
