updated scripts for the latest headless client code

--- a/client/consumer/test.cfg
+++ b/client/consumer/test.cfg
@@ -5,9 +5,6 @@ general = {
 
     use_fec = true;
     use_avsync = true;
-
-    consumer_use_rtx = true;
-    consumer_playback_skip_incomplete = true;
     
     ndnnetwork ={
         connect_host = "localhost";
@@ -20,8 +17,6 @@ consume = {
         video = {
             interest_lifetime = 2000;
             jitter_size = 150;
-            buffer_size = 200;
-            slot_size = 16000;
         };
         stat_gathering = ({
             name="buffering";
@@ -38,32 +33,18 @@ consume = {
         {
             name="data";
             statistics = ("rawBytesRcvd", "isent", "segNumRcvd", "timeouts", "rtxNum");
+        },
+        {
+            name="security";
+            statistics= ("framesReq", "framesAsm", "verifySuccess", "verifyFailure");
         });
     };
 
     streams = (
     {
         type = "video";
-        session_prefix = "/ndn/edu/ucla/remap/ndnrtc/user/client1";
+        base_prefix = "/ndn/edu/ucla/%40GUEST/peter%40remap.ucla.edu/client0";
         name = "camera";
         thread_to_fetch = "low";
-        segment_size = 1000;
-        sync = "sound";
-        threads = (
-        {
-            name = "low";
-            average_segnum_delta = 5;
-            average_segnum_delta_parity = 2;
-            average_segnum_key = 30;
-            average_segnum_key_parity = 6
-            coder = {
-                frame_rate = 30;
-                gop = 30;
-                start_bitrate = 700;
-                max_bitrate = 3000;
-                encode_height = 480;
-                encode_width = 640;
-            };
-        });
     });
 };
